Demonstrate use of expanded fields when editing. Changes made by David Weinberg (david@quadpro.com).

--- a/DataSource Test/components/personListView/details.html
+++ b/DataSource Test/components/personListView/details.html
@@ -7,7 +7,7 @@
 		</div>
 	</header>
 	<div class="details-content">
-		<h3 data-bind="text: currentItem.Company"></h3>
+		<h3 data-bind="text: currentItem.oEmployer.Name"></h3>
 		<!-- This is the problem button -->
 		<a data-role="button" data-align="right" data-icon="organize" data-bind="events: { click: navigateToCompany}">Employer</a>
 	</div>
