--- a/DataSource Test/components/personListView/view.html
+++ b/DataSource Test/components/personListView/view.html
@@ -12,7 +12,7 @@
     <script type="text/x-kendo-template" id="personListViewModelTemplate">
         <div class="image-with-text">
             <h3>#: data['Name'] #</h3>
-            <p>#: data['Company'] #</p>
+            <p>#: data['oEmployer'].Name #</p>
         </div>
     </script>
 </div>
